load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_extract")

# files we want to add to the docker image
pkg_tar(
    name = "files",
    files = {
        "presentation.Rmd": "/docs/presentation.Rmd",
    },
)

container_image(
    name = "presenter_image",
    base = "@xaringan_stable//image",
    legacy_run_behavior = False,
    tars = [
        ":files",
    ],
    workdir = "/docs",
)

container_run_and_extract(
    name = "presentation",
    commands = [
        "R -e \\\"rmarkdown::render('presentation.Rmd', output_file='presentation.html')\\\"",
    ],
    extract_file = "/docs/presentation.html",
    image = ":presenter_image.tar",
)
